# alsa-connector

./: CMakeLists.txt  IOConnectorGraph-copy.cpp  IOConnectorGraph-copy.hpp  README.md  alsa_connector.kdev4
include/: ConnectionManager.hpp  IOConnectorGraph.hpp  IOConnectorGraph.hpp.orig  MainWindow.hpp  MainWindow.hpp.orig
libaconnect/: CMakeLists.txt
libaconnect/include/: aconnect.hpp
libaconnect/src/: aconnect.cpp
src/: ConnectionManager.cpp  IOConnectorGraph.cpp  IOConnectorGraph.cpp.orig  MainWindow.cpp  MainWindow.cpp.orig  main.cpp  main.cpp.orig
